--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "zeal-theme",
-    "displayName": "Zeal - An eyes relieving theme",
-    "description": "I suffer from Red–green color blindness, hence my eyes are more sensitive to jazzy & piercing colours, which are widely used in the community for dark themes. The goal of this extension / theme was to provide a dark theme with blunted colours.",
+    "displayName": "Zeal Theme",
+    "description": "An eye easing theme with low contrasts",
 	"version": "1.1.0",
 	"icon": "resources/logo.jpg",
     "publisher": "kqadem",
